--- a/src/statics/views/login.html
+++ b/src/statics/views/login.html
@@ -9,6 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/blueimp-md5/2.10.0/js/md5.min.js"></script>
     <title>登录页面</title>
 </head>
 
@@ -59,6 +60,32 @@
 <script>
     function register() {
         window.location.href = "/account/register"
+    }
+
+    $("#vcodeimgId").click(function () {
+        $("#vcodeimgId").attr('src', `/account/vcode?randomId=${Math.random()}`)
+    })
+    
+    //登陆处理函数
+    function login() {
+        var username = $("#usernameId").val()
+        var password = md5($("#passwordId").val() + "!@#ZZZ-_-")
+        var vcode = $("#vcodeId").val()
+
+        $.post('/account/login', {
+            username,
+            password,
+            vcode
+        }, function (result) {
+            if (result.status !== 0) {
+                // 重新获取验证码
+                $("#vcodeimgId").attr('src', `/account/vcode?randomId=${Math.random()}`)
+                alert(result.message)
+            } else {
+                // 跳转到学生列表页面
+                window.location.href = "/studentmanager/list"
+            }
+        })
     }
 </script>
 
