--- a/src/statics/views/register.html
+++ b/src/statics/views/register.html
@@ -42,16 +42,25 @@
 </body>
 <script>
     function register() {
+        //console.log(1)
         //1.获取到用户输入的信息
         const username = $("#usernameId").val()
-        const password = md5($("#passwordId").val())
-
+        //!@#ZZZ-_-加盐技术，这样做就算别人抓包也破解不了；注册&登录保持一致
+		//多端保持同样的盐
+        const password = md5($("#passwordId").val()+"!@#ZZZ-_-")
+    //console.log(username);
         //2.发送请求给服务器
         $.post("/account/register", {
-            username,
-            password
+            username:username,
+            password:password
         }, function (result) {
-            console.log(result)
+            //如果result的状态不等于0
+            if(result.status!==0){
+                alert(result.message)
+            }else{
+                //跳转到登陆页面
+                window.location.href='/account/login'
+            }
         });
     }
 </script>
