--- a/src/statics/views/login.html
+++ b/src/statics/views/login.html
@@ -83,7 +83,8 @@
                 alert(result.message)
             } else {
                 // 跳转到学生列表页面
-                window.location.href = "/studentmanager/list"
+                window.location.href = `/studentmanager/list`
+                window.sessionStorage.setItem('user',username);
             }
         })
     }
