--- a/src/statics/views/parent.html
+++ b/src/statics/views/parent.html
@@ -36,7 +36,7 @@
                             <a class="navbar-brand" href="#">欢迎进入后台管理</a>
                         </div>
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-5">
-                            <p class="navbar-text navbar-right" id="user">欢迎【admin】登录&nbsp;
+                            <p class="navbar-text navbar-right" id="user">欢迎【{{username}}】登录&nbsp;
                                 <a href="javascript:logout()" style="color:red;font-size: 18px;" class="navbar-link">退出</a>
                             </p>
                         </div>
@@ -65,3 +65,17 @@
 </body>
 
 </html>
+<script>
+    //登出事件
+    function logout() {
+        if (confirm('您确定需要退出吗?')) {
+            window.location.href = '/account/logout'
+        }
+    }
+
+    //高亮效果
+    $('.list-group a').click(function () {
+        //console.log(1);
+        $(this).addClass('active').siblings().removeClass('active');
+    })
+</script>
